# Controlled-Descent-Simulator

./: .gitignore  LICENSE  Readme.md
.github/workflows/: deploy.yml
core/: CMakeLists.txt  Trajectory.cpp  Trajectory.hpp  core.cpp  core.hpp  core_defs.hpp
core/Models/: BaseModel.cpp  BaseModel.hpp  Rocket.cpp  Rocket.hpp
core/Trajectory/: Poly4.cpp  Poly4.hpp  Trajectory.hpp
core/ext/: bindings.cpp  ext_comm.cpp  ext_comm.hpp  ext_defs.hpp
frontend/: Readme.md  index.html  main.js
modeling/: requirements.txt
modeling/notebooks/: 01_model_derivation.ipynb  descent_codegen.py
modeling/notebooks/exported_cpp/: _driver.cpp  core_defs_old.hpp  dynamics_ff_lqr_01.cpp  dynamics_ff_lqr_01.hpp
